Added y axis labels, margin, and scrollable container.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,3 +7,4 @@
 @import "/components/likeBtn";
 @import "/components/cardWrapper";
 @import "/components/appTitle";
+@import "/components/barChart";
