Big changes to UI. Added device list. Added configurable gutter.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,3 +8,5 @@
 @import "/components/cardWrapper";
 @import "/components/appTitle";
 @import "/components/barChart";
+@import "/components/deviceListItem";
+@import "/components/deviceList";
