--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,10 @@
   background: white;
 }
 
+.wide-letter {
+  letter-spacing: 4px;
+}
+
 .superbold {
   font-weight: 800;
 }
@@ -12,10 +16,11 @@
 }
 
 .padded-container {
-  padding-left: 2.4rem;
-  padding-right: 2.4rem;
-  max-width: 150rem;
+  padding-left: 0rem;
+  padding-right: 0rem;
+  max-width: 190rem;
   margin: 0 auto;
+  background: $blue-grad;
 }
 
 .fill-viewport {
