--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,12 +1,15 @@
 // Colors:
-$prim-color: #475d89;
+$prim-color: #6955f9;
 $link-color: #d94e6c;
+$pageTitle-color: white;
 $lighter-color: hsl(220, 20.7, 55.8);
 $extra-light-color: hsl(220, 10, 90);
+// Off white
+$super-light-color: hsl(220, 5, 95);
 
 // Inverted:
 $background-color: white;
-$blue-grad: linear-gradient(to bottom right, #2c45a3, #6955f9);
+$blue-grad: linear-gradient(to bottom, #372b47 5%, #253d7b);
 $background-color-alt: #90f1f9;
 
 $wide-screen-width: 1500px;
