--- a/src/styles/components/_appTitle.scss
+++ b/src/styles/components/_appTitle.scss
@@ -1,5 +1,41 @@
 .appTitle {
   text-align: right;
-  color: $extra-light-color;
-  padding-right: 40px;
+  color: $pageTitle-color;
+
+  .flex-row {
+    //justify-content: space-between;
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .appTitle__leftPlaceholder {
+    width: 30%;
+  }
+
+  .appTitle__pageTitle {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    width: 40%;
+    h3 {
+      margin-bottom: 0;
+    }
+  }
+  .appTitle__logo {
+    align-self: flex-end;
+    display: flex;
+    justify-content: flex-end;
+    color: $extra-light-color;
+    width: 30%;
+
+    h1 {
+      margin-bottom: 0;
+      display: inline-block;
+    }
+    .material-icons {
+      font-size: 3.5rem;
+      padding-right: 1.0rem;
+    }
+  }
 }
