--- a/src/styles/components/_deviceList.scss
+++ b/src/styles/components/_deviceList.scss
@@ -2,4 +2,13 @@
   padding-left: 20px;
   padding-bottom: 4px;
   padding-top: 30px;
+  color: $super-light-color;
+  display: flex;
+  align-items: center;
+  height: 5.0rem;
+
+  .material-icons {
+    padding-left: 0.5rem;
+    font-size: 1.6rem;
+  }
 }
