Removed background for activity cards.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -10,3 +10,4 @@
 @import "/components/barChart";
 @import "/components/deviceListItem";
 @import "/components/deviceList";
+@import "/components/barGraphCard";
