--- a/src/styles/components/_cardWrapper.scss
+++ b/src/styles/components/_cardWrapper.scss
@@ -3,7 +3,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-
   background-color: $background-color;
   box-shadow: 0 1px 5px 0 rgba(45, 62, 80, 0.12);
   border-radius: 0.1875rem;
@@ -21,4 +20,9 @@
 
 .noPadding {
   padding: 0;
+}
+
+.noBackground {
+  background: none;
+  background-color: transparent;
 }
