--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -72,6 +72,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: lighter;
   color: inherit;
   margin-top: 0;
+  //text-shadow: 0 0 10px $shadow-color-light;
 }
 
 h1 {
