--- a/src/styles/components/_cardWrapper.scss
+++ b/src/styles/components/_cardWrapper.scss
@@ -4,9 +4,8 @@
   flex-direction: column;
   width: 100%;
   background-color: $background-color;
-  box-shadow: 0 1px 5px 0 rgba(45, 62, 80, 0.12);
+  box-shadow: 0 1px 5px 0 $shadow-color-light;
   border-radius: 0.1875rem;
-
   padding: 1rem;
 }
 
