--- a/src/styles/components/_barChart.scss
+++ b/src/styles/components/_barChart.scss
@@ -1,3 +1,16 @@
+.line {
+  fill: none;
+  stroke: #12e9ff;
+  stroke-width: 1.5;
+}
+
+.tick text {
+  fill: #FFF;
+}
+.tick line {
+  stroke: #FFF;
+}
+
 .barChart-scrollable-wrapper {
   overflow-y: scroll;
 }
