Completed initial mock integration with device list and simple aggr API.

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -15,7 +15,7 @@ $shadow-color-norm: rgba(45, 62, 80, 0.12);
 $background-color: white;
 //$blue-grad: radial-gradient(circle, #1c254a 0%, #281d37 80%);
 
-$blue-grad: linear-gradient(to bottom, #140b1f 5%, #1c254a);
+$blue-grad: linear-gradient(to bottom, #2c2352 5%, #1c254a);
 $background-color-alt: #90f1f9;
 
 $wide-screen-width: 1500px;
