--- a/src/styles/components/_appTitle.scss
+++ b/src/styles/components/_appTitle.scss
@@ -1,6 +1,6 @@
 .appTitle {
   text-align: right;
-  color: $pageTitle-color;
+  color: $body-text-color;
 
   .flex-row {
     //justify-content: space-between;
