--- a/src/styles/components/_barGraphCard.scss
+++ b/src/styles/components/_barGraphCard.scss
@@ -1,9 +1,9 @@
 .barGraphCard__addr {
   font-size: 1.0rem;
-  color: $extra-light-color;
+  color: $body-text-color-lighter;
   font-weight: lighter;
 }
 
 .barGraphCard__alias {
-  color: $extra-light-color;
+  color: $body-text-color;
 }
