--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -80,9 +80,7 @@
 }
 
 .row:before,
-.row:after,
-.padded-row:before,
-.padded-row:after {
+.row:after {
   content: "";
   display: table;
   clear: both;
@@ -91,24 +89,6 @@
 .padded-row [class*='col-'] {
   padding-right: 20px;
   padding-left: 20px;
-}
-
-@media only screen and (max-width: 1200px) {
-  .padded-container {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  /* Small Screen */
-  .padded-row [class*='col-'] {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  /* Get rid of padding if 100% ie 8 spanning columns*/
-  .row [class$='-8'] + [class$='-8']{
-    //padding-left: 0;
-  }
 }
 
 [class*='col-'] {
