--- a/src/styles/components/_deviceList.scss
+++ b/src/styles/components/_deviceList.scss
@@ -1,8 +1,8 @@
 .deviceList__title {
   padding-left: 20px;
-  padding-bottom: 4px;
+  padding-bottom: 20px;
   padding-top: 30px;
-  color: $super-light-color;
+  color: $heading-text-color;
   display: flex;
   align-items: center;
   height: 5.0rem;
