--- a/src/styles/components/_deviceListItem.scss
+++ b/src/styles/components/_deviceListItem.scss
@@ -1,8 +1,10 @@
 .deviceListItem__wrapper {
   font-size: 1.0rem;
-  border-top: 1px solid $extra-light-color;
+  //border-top: 1px solid $extra-light-color;
   height: 8.0rem;
   color: $lighter-color;
+  border-radius: 0.8rem;
+  //border: 1px solid $lighter-color;
 
   .flex-row {
     justify-content: space-between;
@@ -17,20 +19,20 @@
   max-width: 150px;
 
   .deviceListItem__deviceName {
-    color: $prim-color;
+    color: $body-text-color;
   }
 }
 
 .deviceListItem__countWrapper {
   height: 100%;
-  border-left: 1px solid $extra-light-color;
+  //border-left: 1px solid $extra-light-color;
   padding-left: 25px;
   padding-right: 25px;
   flex-direction: column;
   align-items: flex-start;
 
   .deviceListItem__count {
-    color: $prim-color;
+    color: $link-color;
     font-weight: 500;
     display:inline-block;
   }
