--- a/src/styles/components/_deviceListItem.scss
+++ b/src/styles/components/_deviceListItem.scss
@@ -30,6 +30,7 @@
   padding-right: 25px;
   flex-direction: column;
   align-items: flex-start;
+  color: $body-text-color;
 
   .deviceListItem__count {
     color: $link-color;
