Integration with BE.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -201,3 +201,11 @@ a.is-active {
   border-bottom-width: 0.2rem;
   border-bottom-color: $prim-color;
 }
+
+.main-chart {
+  height: 400px;
+}
+
+.device-chart {
+  height: 200px;
+}
