WIP bubble graph.

--- a/src/styles/components/_barGraphCard.scss
+++ b/src/styles/components/_barGraphCard.scss
@@ -1,9 +1,9 @@
-.barGraphCard__addr {
+.barGraphCard__subtitle {
   font-size: 1.0rem;
   color: $body-text-color-lighter;
   font-weight: lighter;
 }
 
-.barGraphCard__alias {
+.barGraphCard__title {
   color: $body-text-color;
 }
