--- a/src/styles/components/_appTitle.scss
+++ b/src/styles/components/_appTitle.scss
@@ -1,29 +1,67 @@
+$title-height: 150px;
+$short-title-height: 100px;
 .appTitle {
+
+  z-index: 10;
+
+  -webkit-transition: background 1s ease-in-out;
+  -moz-transition: background 1s ease-in-out;
+  -o-transition: background 1s ease-in-out;
+  transition: background 1s ease-in-out;
+
+  padding: $main-app-padding;
+  width: 100%;
+  position: fixed;
+
   text-align: right;
   color: $body-text-color;
 
   .flex-row {
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
+
     //justify-content: space-between;
     align-items: center;
     padding-left: 40px;
     padding-right: 40px;
+    height: $title-height;
+
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
   }
 
-  .appTitle__leftPlaceholder {
-    width: 30%;
+  .flex-row:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: $short-title-height + 15px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.84), rgba(0, 0, 0, 0));
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+    z-index: -2;
   }
 
-  .appTitle__pageTitle {
+  .appTitle__centerPlaceholder {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     width: 40%;
+  }
+
+  .appTitle__pageTitle {
+    text-align: left;
+    width: 30%;
+
     h3 {
       margin-bottom: 0;
     }
   }
   .appTitle__rightStuff {
-    align-self: flex-end;
+    align-self: center;
     display: flex;
     flex-direction: column;
 
@@ -46,6 +84,17 @@
     }
   }
   .appTitle__time {
-    color: $lighter-color
+    color: $lighter-color;
+  }
+}
+
+.appTitle.showShadow {
+  .flex-row {
+    height: $short-title-height;
+  }
+
+  .flex-row:before {
+    opacity: 1;
+
   }
 }
