Updated bubble graph text labels and colors

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -11,3 +11,4 @@
 @import "/components/deviceListItem";
 @import "/components/deviceList";
 @import "/components/barGraphCard";
+@import "/components/bubbleChart";
