--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,7 @@
+// Fonts
+$body-text-font: 'Muli', Arial, sans-serif;
+$angular-text-font: 'Rajdhani', Arial, sans-serif;
+
 // Colors
 $RED: #ff4159;
 $GREEN: #7ef468;
