--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -13,7 +13,7 @@ body {
 }
 
 body {
-  font-family: 'Muli', Arial, sans-serif;
+  font-family: $body-text-font;
   color: $prim-color;
 }
 
@@ -91,11 +91,6 @@ h2 {
 h3 {
   font-size: 2.2rem;
 }
-@media only screen and (max-width: 1500px) {
-  h3 {
-    font-size: calc(.002 * 100vw + 2.509091rem)
-  }
-}
 
 h4 {
   font-size: 2.0rem;
@@ -103,9 +98,9 @@ h4 {
 }
 
 h5 {
-   font-size: 1.6rem;
-   margin-bottom: 1.0rem;
-   font-weight: normal;
+  font-size: 1.6rem;
+  margin-bottom: 1.0rem;
+  font-weight: normal;
 }
 
 h6 {
