--- a/src/styles/components/_deviceList.scss
+++ b/src/styles/components/_deviceList.scss
@@ -1,5 +1,5 @@
 .deviceList__title {
-  padding-left: 20px;
+  padding: $card-content-padding;
   padding-bottom: 20px;
   padding-top: 30px;
   color: $heading-text-color;
