--- a/src/styles/components/_barGraphCard.scss
+++ b/src/styles/components/_barGraphCard.scss
@@ -1,3 +1,7 @@
+.barGraphCard {
+  padding: $card-content-padding;
+}
+
 .barGraphCard__subtitle {
   font-size: 1.0rem;
   color: $body-text-color-lighter;
