Small bug fix with graph data offset.

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -38,6 +38,7 @@ $graph-body-color: $lighter-color;
 $graphColor: $lighter-color;
 
 // Card
+//$card-color: hsla(228, 40%, 13%, 0.5);
 $card-color: hsla(228, 40%, 13%, 0.5);
 //#181f3c
 $card-shadow-color: $shadow-color-norm;
