Initial quick facts UI prototype.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,5 +14,6 @@
 @import "/components/deviceList";
 @import "/components/barGraphCard";
 @import "/components/bubbleChart";
+@import "/components/dataWell";
 @import "/containers/locationTab";
 @import "/containers/overviewTab";
