--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,6 +2,8 @@
 $body-text-font: 'Muli', Arial, sans-serif;
 $angular-text-font: 'Rajdhani', Arial, sans-serif;
 
+$h6-font-size: 1.4rem;
+
 // Colors
 $RED: #ff4159;
 $GREEN: #7ef468;
@@ -10,6 +12,7 @@ $prim-color: white;
 $link-color: $GREEN;
 $pageTitle-color: white;
 $lighter-color: hsl(220, 20.7, 55.8);
+$lighter-color-trans: hsla(220, 20.7, 55.8, 0.6);
 $extra-light-color: hsl(220, 10, 90);
 // Off white
 $super-light-color: hsl(220, 5, 95);
@@ -20,13 +23,12 @@ $shadow-color-norm: rgba(45, 62, 80, 0.12);
 //$blue-grad: radial-gradient(circle, #1c254a 0%, #281d37 80%);
 $blue-grad: linear-gradient(to bottom, #1c254a 3%, #131829);
 
-
 // App Background
 $background-color: $blue-grad;
 
 // Text Colors
 $body-text-color: hsl(0, 0, 98);
-$body-text-color-lighter: hsl(0, 0, 50);
+$body-text-color-lighter: $lighter-color;
 $body-text-color-inverted: hsl(0, 0, 40);
 $body-text-color-alt: #81b7fb;
 $heading-text-color: white;
@@ -39,7 +41,7 @@ $graphColor: $lighter-color;
 
 // Card
 //$card-color: hsla(228, 40%, 13%, 0.5);
-$card-color: hsla(228, 40%, 13%, 0.5);
+$card-color: rgba(255, 255, 255, 0.04);
 //#181f3c
 $card-shadow-color: $shadow-color-norm;
 $card-shadow: 0 1px 10px 0 $card-shadow-color;
