--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,14 @@
   background: white;
 }
 
+.noPadding {
+  padding: 0;
+}
+
+.noMargin {
+  margin: 0;
+}
+
 .wide-letter {
   letter-spacing: 4px;
 }
@@ -202,7 +210,7 @@ a.is-active {
 }
 
 .main-chart {
-  height: 400px;
+  height: 350px;
 }
 
 
