Coverflow UI, footer, snazzy gradients

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -15,5 +15,6 @@
 @import "/components/barGraphCard";
 @import "/components/bubbleChart";
 @import "/components/dataWell";
+@import "/components/coverFlow";
 @import "/containers/locationTab";
 @import "/containers/overviewTab";
