--- a/src/styles/components/_barGraphCard.scss
+++ b/src/styles/components/_barGraphCard.scss
@@ -3,11 +3,12 @@
 }
 
 .barGraphCard__subtitle {
-  font-size: 1.0rem;
+  font-size: 1.2rem;
   color: $body-text-color-lighter;
   font-weight: lighter;
 }
 
 .barGraphCard__title {
   color: $body-text-color;
+  font-weight: 700;
 }
