--- a/src/styles/components/_cardWrapper.scss
+++ b/src/styles/components/_cardWrapper.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: $card-color;
+  background: $card-color;
   box-shadow: $card-shadow;
   border-radius: 0.1875rem;
   padding: 1rem;
