--- a/src/styles/components/_appTitle.scss
+++ b/src/styles/components/_appTitle.scss
@@ -1,99 +1,103 @@
-$title-height: 150px;
-$short-title-height: 100px;
+$title-height: 520px;
+$short-title-height: 600px;
 
-.appTitle {
+$title-width: 100%;
 
-  z-index: 10;
-
-  -webkit-transition: background 1s ease-in-out;
-  -moz-transition: background 1s ease-in-out;
-  -o-transition: background 1s ease-in-out;
-  transition: background 1s ease-in-out;
-
-  padding: $main-app-padding;
-  width: 100%;
+.appTitle__wrapper {
   position: fixed;
+  width: 100%;
+  z-index: 10;
+  bottom: $short-title-height * -0.52;
+  height: $short-title-height;
 
-  text-align: right;
-  color: $body-text-color;
+  .appTitle {
+    -webkit-transition: background 1s ease-in-out;
+    -moz-transition: background 1s ease-in-out;
+    -o-transition: background 1s ease-in-out;
+    transition: background 1s ease-in-out;
 
-  .flex-row {
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba(0, 0, 0, 0.0));
+    //padding: $main-app-padding;
+    position: relative;
+    margin: 0 auto;
+    width: $title-width;
 
-    //justify-content: space-between;
-    align-items: center;
-    height: $title-height;
+    text-align: right;
+    color: $body-text-color;
 
-    -webkit-transition: all 0.5s ease-in-out;
-    -moz-transition: all 0.5s ease-in-out;
-    -o-transition: all 0.5s ease-in-out;
-    transition: all 0.5s ease-in-out;
-  }
+    .flex-row {
+      //justify-content: space-between;
+      align-items: flex-start;
+      height: $short-title-height;
 
-  .flex-row:before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    height: $short-title-height + 15px;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.84), rgba(0, 0, 0, 0));
-    opacity: 0;
-    transition: all 0.5s ease-in-out;
-    z-index: -2;
-  }
+      -webkit-transition: all 0.5s ease-in-out;
+      -moz-transition: all 0.5s ease-in-out;
+      -o-transition: all 0.5s ease-in-out;
+      transition: all 0.5s ease-in-out;
+    }
 
-  .appTitle__centerPlaceholder {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    width: 40%;
-  }
+    .flex-row:before {
+      content: '';
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: $short-title-height;
+      background: radial-gradient(ellipse 70% 50%, rgba(4, 20, 51, 0.86) 45%, transparent 100%);
+      opacity: 1; // Set this to 0 for always background
+      transition: all 0.5s ease-in-out;
+      z-index: -2;
+    }
 
-  .appTitle__pageTitle {
-    text-align: left;
-    width: 30%;
+    .appTitle__title {
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+      width: 40%;
+      margin-top: 200px;
+      h3 {
+        margin-bottom: 0;
+      }
+    }
 
-    h3 {
-      margin-bottom: 0;
+    .appTitle__leftPlaceholder {
+      text-align: left;
+      width: 30%;
+    }
+    .appTitle__rightStuff {
+      align-self: center;
+      display: flex;
+      flex-direction: column;
+
+      justify-content: flex-end;
+      width: 30%;
+    }
+    .appTitle__logo {
+      align-self: flex-start;
+      display: flex;
+      justify-content: flex-start;
+      color: $extra-light-color;
+
+      h1 {
+        margin-bottom: 0;
+        display: inline-block;
+      }
+      .material-icons {
+        font-size: 3.5rem;
+        padding-right: 1.0rem;
+      }
+    }
+    .appTitle__time {
+      color: $lighter-color;
     }
   }
-  .appTitle__rightStuff {
-    align-self: center;
-    display: flex;
-    flex-direction: column;
 
-    justify-content: flex-end;
-    width: 30%;
-  }
-  .appTitle__logo {
-    align-self: flex-end;
-    display: flex;
-    justify-content: flex-end;
-    color: $extra-light-color;
-
-    h1 {
-      margin-bottom: 0;
-      display: inline-block;
+  .appTitle.showShadow {
+    .flex-row {
+      height: $short-title-height;
     }
-    .material-icons {
-      font-size: 3.5rem;
-      padding-right: 1.0rem;
+
+    .flex-row:before {
+      opacity: 1;
     }
-  }
-  .appTitle__time {
-    color: $lighter-color;
-  }
-}
-
-.appTitle.showShadow {
-  .flex-row {
-    height: $short-title-height;
-  }
-
-  .flex-row:before {
-    opacity: 1;
-
   }
 }
