--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,20 @@
   background: $background-color;
 }
 
+
+.tint-background2 {
+  position: absolute;
+  width: 100%;
+  height: 800px;
+
+  div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: $second-grad;
+  }
+}
+
 .padded-container {
   padding: $main-app-padding;
   max-width: 190rem;
