--- a/src/styles/components/_coverFlow.scss
+++ b/src/styles/components/_coverFlow.scss
@@ -30,4 +30,22 @@ $button-font-size: 3.4rem;
     top: 50%;
     right: 15px;
   }
+
+  .carousel-enter {
+    opacity: 0.01;
+  }
+
+  .carousel-enter.carousel-enter-active {
+    opacity: 1;
+    transition: opacity 2s ease-in;
+  }
+
+  .carousel-leave {
+    opacity: 1;
+  }
+
+  .carousel-leave.carousel-leave-active {
+    opacity: 0;
+    transition: opacity 2s ease-out;
+  }
 }
