Moved app time out. WIP.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,6 +5,7 @@
 @import "/base/grid";
 @import "/base/spacers";
 @import "/base/baseMixins";
+@import "/components/appTime";
 @import "/components/truncateString";
 @import "/components/likeBtn";
 @import "/components/cardWrapper";
