--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,9 +26,11 @@
 
 
 .tint-background2 {
-  position: absolute;
+  position: fixed;
   width: 100%;
   height: 800px;
+  left: 0;
+  top: 0;
 
   div {
     position: relative;
