Renamed AppTitle to TabTitle, fixed app time.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,7 +9,7 @@
 @import "/components/truncateString";
 @import "/components/likeBtn";
 @import "/components/cardWrapper";
-@import "/components/appTitle";
+@import "/components/tabTitle";
 @import "/components/barChart";
 @import "/components/deviceListItem";
 @import "/components/deviceList";
