--- a/src/styles/components/_appTime.scss
+++ b/src/styles/components/_appTime.scss
@@ -1,20 +1,21 @@
 .appTime__wrapper {
     position: fixed;
     z-index: 10;
+    right: 15px;
+    top: 15px;
 
     .appTitle__logo {
         align-self: flex-start;
         display: flex;
-        justify-content: flex-start;
+        justify-content: flex-end;
         color: $extra-light-color;
 
-        h1 {
+        h4 {
         margin-bottom: 0;
         display: inline-block;
         }
         .material-icons {
-        font-size: 3.5rem;
-        padding-right: 1.0rem;
+        font-size: 2.5rem;
         }
     }
 
