Cleaned up styling.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,12 +1,11 @@
-@import "./base/settings";
-@import "./base/animations";
-@import "./global";
+@import "/base/settings";
+@import "/base/mixins/base";
+@import "/base/classes/base";
+
 @import "/base/base";
 @import "/base/grid";
-@import "/base/spacers";
-@import "/base/baseMixins";
+
 @import "/components/appTime";
-@import "/components/truncateString";
 @import "/components/likeBtn";
 @import "/components/cardWrapper";
 @import "/components/tabTitle";
@@ -17,5 +16,90 @@
 @import "/components/bubbleChart";
 @import "/components/dataWell";
 @import "/components/coverFlow";
+@import "/components/sectionTitle";
+@import "/components/sticky";
+
 @import "/containers/locationTab";
 @import "/containers/overviewTab";
+
+.tint-background {
+  z-index: -1;
+  background: $background-color;
+}
+
+.tint-background2 {
+  position: fixed;
+  width: 100%;
+  height: 800px;
+  left: 0;
+  top: 0;
+
+  div {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: $second-grad;
+  }
+}
+
+.padded-container {
+  padding: $main-app-padding;
+  max-width: 190rem;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 1200px) {
+  .padded-container {
+    padding: $main-app-padding;
+  }
+}
+
+.fill-viewport {
+  width: 100vw;
+  height: 100vh;
+}
+
+.fill-parent {
+  width: 100%;
+  height: 100%;
+}
+
+.center-parent {
+  position: relative;
+}
+
+.center-child {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.flex-center-parent {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+.flex-fill-parent {
+  flex: 1 auto;
+}
+
+/* Put this on parent of a display:flex child to center it. */
+.flex-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.main-chart {
+  height: 350px;
+}
+
+.location-bubble-chart {
+  height: 600px;
+}
+
+.device-chart {
+  height: 200px;
+}
