--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,3 +1,5 @@
+@import "./mixins/spacing";
+
 * {
   box-sizing: border-box;
 }
@@ -8,53 +10,14 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
   margin: 0;
-}
-
-body {
+  font-size: 1.6rem;
   font-family: $body-text-font;
   color: $prim-color;
 }
 
 button {
-  margin: 0;
-  padding: 0;
-}
-
-.primary-color {
-  color: $prim-color;
-}
-
-.secondary-color {
-  color: $link-color;
-}
-
-.hide {
-  display:none;
-}
-
-a {
-  color: $link-color;
-  text-decoration: none;
-  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-  border-bottom: 1px solid $link-color;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  border-bottom-color: $link-color;
-}
-
-a > * {
-  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
-}
-
-a:hover, a:hover > * {
-  color: $link-color;
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1);
+  @include no-spacing;
 }
 
 .btn {
@@ -62,8 +25,6 @@ a:hover, a:hover > * {
   padding: 8px 14px 8px 14px;
 }
 
-/*::-moz-selection { background: transparent;}*/
-/*::selection {background: transparent;}*/
 :focus {
   outline: none;
 }
@@ -72,14 +33,13 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: lighter;
   color: inherit;
   margin-top: 0;
-  //text-shadow: 0 0 10px $shadow-color-light;
 }
 
 h1 {
   font-size: 3.2rem;
 }
 
-h1.is--heading-0 {
+h1.heading__0 {
   font-size: 5.5rem;
   font-weight: 800;
 }
@@ -120,45 +80,11 @@ p {
   color: $lighter-color;
 }
 
-.noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-}
-
-.nospacing {
-  margin: 0;
-  padding: 0;
-}
-
-// Padding:
-// top + bottom
-.p-tb-xs {
-  padding-top: $xs-space;
-  padding-bottom: $xs-space;
-}
-.p-tb-s {
-  padding-top: $s-space;
-  padding-bottom: $s-space;
-}
-
-/// Margin:
-// Top + bottom
-.m-tb-xs {
-  margin-top: $xs-space;
-  margin-bottom: $xs-space;
-}
-.m-tb-s {
-  margin-top: $s-space;
-  margin-bottom: $s-space;
-}
-
-
 section {
   position: relative;
   min-height: 30rem;
+}
+
+.noSelect {
+  user-select: none;
 }
