--- a/src/styles/base/mixins/_textMixins.scss
+++ b/src/styles/base/mixins/_textMixins.scss
@@ -8,3 +8,15 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+@mixin text-center() {
+  text-align: center;
+}
+
+@mixin text-left() {
+  text-align: left;
+}
+
+@mixin text-right() {
+  text-align: right;
+}
