--- a/src/styles/components/_appTime.scss
+++ b/src/styles/components/_appTime.scss
@@ -1,10 +1,9 @@
 .appTime__wrapper {
-    position: fixed;
     z-index: 10;
     right: 15px;
     top: 15px;
 
-    .appTitle__logo {
+    .appTime__logo {
         align-self: flex-start;
         display: flex;
         justify-content: flex-end;
