--- a/src/styles/base/mixins/_animation.scss
+++ b/src/styles/base/mixins/_animation.scss
@@ -1,9 +1,5 @@
-.fade > * {
+@mixin animation-fade() {
   animation-fill-mode: backwards;
-  -webkit-animation: slideIn 2s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: slideIn 2s; /* Firefox < 16 */
-  -ms-animation: slideIn 2s; /* Internet Explorer */
-  -o-animation: slideIn 2s; /* Opera < 12.1 */
   animation: slideIn 1s;
   animation-timing-function: ease-in-out;
 }
@@ -90,30 +86,6 @@
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
 }
