--- a/src/styles/components/_deviceListItem.scss
+++ b/src/styles/components/_deviceListItem.scss
@@ -3,7 +3,7 @@
   //border-top: 1px solid $extra-light-color;
   height: 8.0rem;
   color: $lighter-color;
-  border-radius: 0.8rem;
+  //border-radius: 0.8rem;
   //border: 1px solid $lighter-color;
 
   .flex-row {
