Real integration for domain to device.

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,6 +2,7 @@
 $body-text-font: 'Muli', Arial, sans-serif;
 $angular-text-font: 'Rajdhani', Arial, sans-serif;
 
+$h5-font-size: 1.6rem;
 $h6-font-size: 1.4rem;
 
 // Colors
