--- a/src/styles/components/_dataWell.scss
+++ b/src/styles/components/_dataWell.scss
@@ -18,7 +18,8 @@
 }
 .dataWell__title {
   display: inline-block;
-  font-size: $h6-font-size;
+  font-size: $h5-font-size;
+  margin-top: $xs-space;
   margin-bottom: $xs-space;
   color: $body-text-color-lighter;
 }
