--- a/src/styles/components/_dataWell.scss
+++ b/src/styles/components/_dataWell.scss
@@ -21,5 +21,5 @@
   font-size: $h5-font-size;
   margin-top: 1rem;
   margin-bottom: $xs-space;
-  color: $body-text-color-lighter;
+  color: $body-text-color;
 }
