Add a new row to quickfacts

--- a/src/styles/components/_dataWell.scss
+++ b/src/styles/components/_dataWell.scss
@@ -22,5 +22,5 @@
   font-size: $h5-font-size;
   margin-top: 1rem;
   margin-bottom: $xs-space;
-  color: $body-text-color;
+  color: $body-text-color-lighter;
 }
