Made heat table more generic

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,6 +20,7 @@
 
 @import "/containers/locationTab";
 @import "/containers/overviewTab";
+@import "/containers/playground";
 
 .tint-background {
   z-index: -1;
