Adds axis labeling

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -17,6 +17,7 @@
 @import "/components/dataWell";
 @import "/components/coverFlow";
 @import "/components/sticky";
+@import "/components/temporalHeatTable";
 
 @import "/containers/locationTab";
 @import "/containers/overviewTab";
