--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,6 +2,11 @@
 $body-text-font: 'Muli', Arial, sans-serif;
 $angular-text-font: 'Rajdhani', Arial, sans-serif;
 
+$h0-font-size: 5.5rem;
+$h1-font-size: 3.2rem;
+$h2-font-size: 2.4rem;
+$h3-font-size: 2.2rem;
+$h4-font-size: 2.0rem;
 $h5-font-size: 1.6rem;
 $h6-font-size: 1.4rem;
 
@@ -12,11 +17,12 @@ $GREEN: #7ef468;
 $prim-color: white;
 $link-color: $GREEN;
 $pageTitle-color: white;
-$lighter-color: hsl(220, 20.7, 55.8);
-$lighter-color-trans: hsla(220, 20.7, 55.8, 0.6);
-$extra-light-color: hsl(220, 10, 90);
+
+$lighter-color: hsl(220, 20.7%, 55.8%);
+$lighter-color-trans: hsla(220, 20.7%, 55.8%, 0.6);
+$extra-light-color: hsl(220, 10%, 90%);
 // Off white
-$super-light-color: hsl(220, 5, 95);
+$super-light-color: hsl(220, 5%, 95%);
 
 $shadow-color-light: white;
 $shadow-color-norm: rgba(0, 0, 0, 0.12);
