--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -40,24 +40,24 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3.2rem;
+  font-size: $h1-font-size;
 }
 
 h1.heading__0 {
-  font-size: 5.5rem;
+  font-size: $h0-font-size;
   font-weight: 800;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: $h2-font-size;
 }
 
 h3 {
-  font-size: 2.2rem;
+  font-size: $h3-font-size;
 }
 
 h4 {
-  font-size: 2.0rem;
+  font-size: $h4-font-size;
   margin-bottom: 0.5rem;
 }
 
