--- a/src/styles/components/_deviceListItem.scss
+++ b/src/styles/components/_deviceListItem.scss
@@ -6,7 +6,7 @@
   //border-radius: 0.8rem;
   //border: 1px solid $lighter-color;
 
-  .flex-row {
+  .flex {
     justify-content: space-between;
     align-items: center;
     height: 100%;
