--- a/src/styles/components/_tabTitle.scss
+++ b/src/styles/components/_tabTitle.scss
@@ -27,7 +27,7 @@ $title-width: 100%;
     text-align: right;
     color: $body-text-color;
 
-    .flex-row {
+    .flex {
       //justify-content: space-between;
       align-items: flex-start;
       height: $short-title-height;
@@ -38,7 +38,7 @@ $title-width: 100%;
       transition: all 0.5s ease-in-out;
     }
 
-    .flex-row:before {
+    .flex:before {
       content: '';
       position: absolute;
       left: 0;
@@ -77,11 +77,11 @@ $title-width: 100%;
   }
 
   .tabTitle.showShadow {
-    .flex-row {
+    .flex {
       height: $short-title-height;
     }
 
-    .flex-row:before {
+    .flex:before {
       opacity: 1;
     }
   }
