--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -13,6 +13,7 @@ $h6-font-size: 1.4rem;
 // Colors
 $RED: #ff4159;
 $GREEN: #7ef468;
+$OFF_BLACK: #353535;
 
 $prim-color: white;
 $link-color: $GREEN;
