--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -78,10 +78,10 @@ b, strong {
 }
 
 p {
-  font-size: 1.6rem;
-  line-height: 3rem;
+  font-size: 1.4rem;
   font-weight: 300;
-  color: $lighter-color;
+  margin: 0;
+  color: $OFF_BLACK;
 }
 
 section {
