--- a/src/styles/base/_grid.scss
+++ b/src/styles/base/_grid.scss
@@ -28,6 +28,14 @@
   }
 }
 
+.fillWidth {
+  width: 100%;
+}
+
+.fillHeight {
+  height: 100%;
+}
+
 .flex {
   [class*='col-'] {
     flex-grow: 0;
@@ -74,8 +82,28 @@
   }
 
   @for $i from 0 through 12 {
-    @media (min-width: 1200px) {
+    @media (min-width: 1216px) {
       .col-xl-#{$i} {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: percentage(1 / 12 * $i);
+      }
+    }
+  }
+
+  @for $i from 0 through 12 {
+    @media (min-width: 1440px) {
+      .col-xxl-#{$i} {
+        flex-grow: 0;
+        flex-shrink: 0;
+        flex-basis: percentage(1 / 12 * $i);
+      }
+    }
+  }
+
+  @for $i from 0 through 12 {
+    @media (min-width: 1664px) {
+      .col-xxxl-#{$i} {
         flex-grow: 0;
         flex-shrink: 0;
         flex-basis: percentage(1 / 12 * $i);
