--- a/src/styles/base/classes/_spacers.scss
+++ b/src/styles/base/classes/_spacers.scss
@@ -52,4 +52,34 @@
   }
 }
 
+@for $i from 0 through 15 {
+  .m-#{$i} {
+    margin: #{$i * 0.4}rem;
+  }
+  .p-#{$i} {
+    padding: #{$i * 0.4}rem;
+  }
+}
+
+@for $i from 0 through 15 {
+  .m-lr-#{$i} {
+    margin-left: #{$i * 0.4}rem;
+    margin-right: #{$i * 0.4}rem;
+  }
+  .p-lr-#{$i} {
+    padding-left: #{$i * 0.4}rem;
+    padding-right: #{$i * 0.4}rem;
+  }
+}
+
+@for $i from 0 through 15 {
+  .m-tb-#{$i} {
+    margin-top: #{$i * 0.4}rem;
+    margin-bottom: #{$i * 0.4}rem;
+  }
+  .p-tb-#{$i} {
+    padding-top: #{$i * 0.4}rem;
+    padding-bottom: #{$i * 0.4}rem;
+  }
+}
 
