--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -38,12 +38,20 @@
   background: transparent none;
 }
 
+#rootContainer {
+  position: relative;
+}
+
 .tint-background {
-  z-index: -1;
+  z-index: -2;
   background: $background-color;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .tint-background2 {
+  z-index: -1;
   position: fixed;
   width: 100%;
   height: 800px;
