Cleaning up css

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -56,6 +56,7 @@ $medium-screen-width: 1000px;
 $main-app-padding: 0 50px 0 50px;
 $card-content-padding: 0 0 0 20px;
 
+$xl-space: 100rem;
 $l-space: 10rem;
 $m-space: 5rem;
 $s-space: 2rem;
