--- a/src/styles/base/classes/_spacers.scss
+++ b/src/styles/base/classes/_spacers.scss
@@ -2,7 +2,6 @@
   height: $xs-space;
   width: 100%;
 }
-
 .small-spacer {
   height: $s-space;
   width: 100%;
@@ -13,6 +12,10 @@
 }
 .large-spacer {
   height: $l-space;
+  width: 100%;
+}
+.xl-spacer {
+  height: $xl-space;
   width: 100%;
 }
 
