--- a/src/styles/containers/_overviewTab.scss
+++ b/src/styles/containers/_overviewTab.scss
@@ -1,3 +1,13 @@
 .overview-tab {
-   padding-top: 80px;
+  padding-top: 80px;
 }
+
+.main-chart {
+  height: 350px;
+}
+
+.device-chart {
+  height: 100px;
+  margin-bottom: 10px;
+}
+
