--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -22,23 +22,7 @@
 @import "/containers/overviewTab";
 @import "/containers/playground";
 
-.noShadow {
-  box-shadow: none;
-}
-
-.noBorder {
-  border: none;
-}
-
-.noPadding {
-  padding: 0;
-}
-
-.noBackground {
-  background: transparent none;
-}
-
-#rootContainer {
+#root-container {
   position: relative;
 }
 
@@ -70,28 +54,13 @@
   padding: $main-app-padding;
   max-width: 220rem;
   margin: 0 auto;
+  min-height: 100vh;
 }
 
 @media only screen and (max-width: 1200px) {
   .padded-container {
     padding: $main-app-padding;
   }
-}
-
-.fill-viewport {
-  width: 100vw;
-  height: 100vh;
-}
-
-.center-parent {
-  position: relative;
-}
-
-.center-child {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%);
 }
 
 .flex-center-parent {
@@ -109,17 +78,4 @@
 .flex-center {
   margin-left: auto;
   margin-right: auto;
-}
-
-.main-chart {
-  height: 350px;
-}
-
-.location-bubble-chart {
-  height: 700px;
-}
-
-.device-chart {
-  height: 100px;
-  margin-bottom: 10px;
 }
