--- a/src/styles/components/_dataWell.scss
+++ b/src/styles/components/_dataWell.scss
@@ -8,7 +8,7 @@
 }
 .dataWell__inner {
   flex: 1 1;
-  text-align: center;
+  //text-align: center;
   justify-content: center;
   display: flex;
   flex-direction: column;
