--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,8 +5,6 @@
 @import "/base/base";
 @import "/base/grid";
 
-@import "/components/appTime";
-@import "/components/likeBtn";
 @import "/components/tabTitle";
 @import "/components/barChart";
 @import "/components/deviceListItem";
@@ -67,4 +65,8 @@
 .flex-center {
   margin-left: auto;
   margin-right: auto;
+}
+
+.logger-table .ReactVirtualized__Grid__innerScrollContainer {
+  transition: height;
 }
