--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,5 +1,3 @@
-@import "./mixins/spacing";
-
 * {
   box-sizing: border-box;
 }
@@ -21,7 +19,8 @@ body {
 }
 
 button {
-  @include no-spacing;
+  margin: 0;
+  padding: 0;
 }
 
 .btn {
@@ -31,6 +30,10 @@ button {
 
 :focus {
   outline: none;
+}
+
+.wide-letter {
+  letter-spacing: 4px;
 }
 
 h1, h2, h3, h4, h5, h6 {
