--- a/src/styles/components/_coverFlow.scss
+++ b/src/styles/components/_coverFlow.scss
@@ -34,7 +34,8 @@ $button-font-size: 3.4rem;
   }
 
   .carousel-enter {
-    opacity: 0.01;
+    opacity: 0;
+    z-index: 1;
   }
 
   .carousel-enter.carousel-enter-active {
@@ -43,11 +44,16 @@ $button-font-size: 3.4rem;
   }
 
   .carousel-exit {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     opacity: 1;
   }
 
   .carousel-exit.carousel-exit-active {
-    opacity: 0;
     transition: opacity 2s ease-out;
+    opacity: 0;
   }
 }
