Progress on overview page

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -45,7 +45,7 @@ $heading-text-color: white;
 
 
 // Graph Colors
-$graph-prim-color: #12e9ff;
+$graph-prim-color: #13d4b7;
 $graph-body-color: $lighter-color;
 $graphColor: $lighter-color;
 
