Filling in data for device cards, adds graph to cards.

--- a/src/styles/containers/_overviewTab.scss
+++ b/src/styles/containers/_overviewTab.scss
@@ -2,6 +2,11 @@
   height: 350px;
 }
 
+.device-small-chart {
+  width: 100%;
+  height: 100px;
+}
+
 .device-chart {
   width: 100%;
   height: 100px;
