--- a/src/styles/components/_coverFlow.scss
+++ b/src/styles/components/_coverFlow.scss
@@ -40,7 +40,7 @@ $button-font-size: 3.4rem;
 
   .carousel-enter.carousel-enter-active {
     opacity: 1;
-    transition: opacity 2s ease-in;
+    transition: opacity 500ms ease-in;
   }
 
   .carousel-exit {
@@ -53,7 +53,7 @@ $button-font-size: 3.4rem;
   }
 
   .carousel-exit.carousel-exit-active {
-    transition: opacity 2s ease-out;
+    transition: opacity 500ms ease-out;
     opacity: 0;
   }
 }
