--- a/src/styles/containers/_overviewTab.scss
+++ b/src/styles/containers/_overviewTab.scss
@@ -7,6 +7,16 @@
   height: 100px;
 }
 
+.device-medium-chart {
+  width: 100%;
+  height: 125px;
+}
+
+.device-large-chart {
+  width: 100%;
+  height: 150px;
+}
+
 .device-chart {
   width: 100%;
   height: 100px;
